--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -24,8 +24,15 @@
         
         <div class="post">
             <div class="post-header">
-                <i class="bi bi-person-circle"></i>
-                <h6 class="poster">{{ post.author }}</h6>
+                {% if post.post_author_id != current_user.user_id %}
+                <a href="/view-profile/{{ post.post_author_id }}" class="view-profile">
+                    <i class="bi bi-person-circle"></i>
+                    <h6 class="poster">{{ post.author }}</h6>
+                </a>
+                {% else %}
+                    <i class="bi bi-person-circle"></i>
+                    <h6 class="poster">{{ post.author }}</h6>
+                {% endif %}
                 <p class="post-date">{{ post.datetime_post }}</p>
                 {% if post.post_author_id == current_user.user_id %}
                     <form action="/edit-post/{{ post.post_id }}" method="get">
