--- a/static/style.css
+++ b/static/style.css
@@ -105,6 +105,7 @@
     padding-left: 20px;
     padding-bottom: 10px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
 }
 
 .post-btns{
@@ -114,6 +115,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.recomm-header{
+    margin:20px;
+    text-align: center;
 }
 
 .recomm-container{
@@ -351,6 +357,11 @@ footer{
 .click-post{
     text-decoration: none;
     color: black;
+    background-color: rgb(180, 177, 177);
+    border-radius: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+
 }
 .click-post:hover{
     text-decoration: underline;
@@ -424,6 +435,59 @@ footer{
     text-decoration: none;
     color: black;
 }
+
+/* For replies under profile page */
+.comment{
+    background-color: var(--overallgray);
+    border-radius: 10px;
+    margin: 20px;
+    padding: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+.comment-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    padding: 0.25rem;
+}
+
+.comment-header i {
+    margin-right: 0.5rem;
+}
+
+.commenter{
+    margin: 0;
+    font-weight: bold;
+    padding-bottom: 0.25rem;
+    margin-right: auto;
+}
+
+.comment-date{
+    font-size: 0.75rem;
+    color: gray;
+}
+
+#comment-content{
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+}
+
+.hidden{
+    display: none;
+}
+
+
+
+
+
 
 /* my posts page */
 #my_post_username{
