--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,11 +16,12 @@
 
     <div class="profile-sections">
         <a href="#"><h4 id="profile_post_btn">Posts</h4></a>
-        <a href="#"><h4 id="profile_replies_btn">Replies</h4></a>
+        <a href="#"><h4 id="profile_replies_btn">My Replies</h4></a>
+        <!-- under posts, users posts will appear -->
         <!-- Under replies, users comments will appear -->
     </div>
-    <div class="profile-content">
 
+    <div class="posts-tab" id="posts-tab">
         {% for post in post %}
         
         <div class="post">
@@ -54,14 +55,44 @@
             </div>
         </div>
         {% endfor %}
+    </div>
+
+    <div class="hidden" id="replies-tab">
+
+        {% for comment in comment %}
+
+        <div class="comment">
+            <div class="comment-header">
+                <i class="bi bi-person-circle"></i>
+                <h6 class="commenter">{{ comment.author }}</h6>
+                <p class="comment-date">{{ comment.datetime_posted }}</p>
+
+                {% if comment.comment_author_id == user.user_id %}
+
+                    <form action="/edit-comment/{{ comment.comment_id }}" method="get">
+                        <input type="hidden" name="comment_id" value="{{ comment.comment_id }}">
+                        <button type="submit" class="btn btn-danger btn-sm" id="edit-button">Edit</button>
+                    </form>
+                    <form action="/delete-comment-from-mycomments" method="post">
+                        <button name="delete" type="submit" class="btn btn-danger btn-sm" id="delete-button" value="{{ comment.comment_id }}" >Delete</button>
+                    </form>
+                {% endif %}
+            </div>
+            <div class="comment-area">
+                <a href="/posts/{{ comment.post_id }}" class="click-post">Click here to view the post</a>
+                <p id="comment-content">
+                    {{ comment.content }}
+                </p>
+            </div>
+        </div>
+        {% endfor %}
 
         
     </div>
-
 {% endblock %}
+        
 
 {% block rightcontent %}
-
 
 
 {% endblock %}
