--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css">
 </head>
-<body>
     <header>
         <nav class="navbar">
             <div class="logo">
@@ -50,8 +49,18 @@
                     <input type="text" class="form-control" id="last-name" name="last-name" placeholder="Last Name">
                 </div>
                 <div class="labeling">
-                    <i class="bi bi-backpack"></i>
-                    <input type="text" class="form-control" id="concentration" name="concentration" placeholder="Concentration">
+                    <label for="concentration">Select your concentration:</label>
+                    <select id="concentration" name="concentration">
+                        <option value="Information Technology">Information Technology</option>
+                        <option value="Bioinformatics">Bioinformatics</option>
+                        <option value="Human Computer Interaction">Human Computer Interaction</option>
+                        <option value="Ai, Robotics, and Gaming">Ai, Robotics, and Gaming</option>
+                        <option value="Cybersecurity">Cybersecurity</option>
+                        <option value="Data Science">Data Science</option>
+                        <option value="Software Engineering">Software Engineering</option>
+                        <option value="Software, Systems, and Networks">Software, Systems, and Networks</option>
+                        <option value="Web and Mobile Applications">Web and Mobile Applications</option>
+                    </select>
                 </div>
 
                 <!-- <label for="username" class="form-label">Username</label> -->
