update in homepage html

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -70,7 +70,7 @@
     <div class="recomm-header">
         <h4>Recommended Users</h4>
     </div>
-    {% for users in users_minus_current %}
+    {% for users in user_recs %}
         <div class="recomm-container">
             <div class="recomm-user">
                 <i class="bi bi-person-circle"></i>
