updating logic for searchbar

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -18,12 +18,16 @@
                     SkillSwap
                 </p>
             </div>
-            <div class="container mt-5">
-                <form action="{{ url_for('search.search_users') }}" method="GET">
-                    <input id="searchbar" type="text" name="query" placeholder="Search">
-                    <button type="submit" class="btn btn-primary">Search</button>
-                </form>
-            </div>
+           
+            <form action="{{ url_for('search') }}" method="POST">
+                <div class="input-group">
+                    <input type="text" name="query" class="form-control" placeholder="Search for users...">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-primary">Search</button>
+                    </div>
+                </div>
+            </form>
+            
             <div>
                 <i id="nav-pfp" class="bi bi-person-circle"></i>
             </div>
