hyperlink color black on search results page

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -21,7 +21,7 @@
            
             <form action="{{ url_for('search') }}" method="POST">
                 <div class="input-group">
-                    <input type="text" name="query" class="form-control" placeholder="Search for users...">
+                    <input id="searchbar" type="text" name="query" class="form-control" placeholder="Search for users...">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-primary">Search</button>
                     </div>
