updates on homepage

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -45,20 +45,20 @@
                 {% endif %}
             </div>
             <div class="post-area">
-                <a href="/posts/{{ post.post_id }}" class="click-post">Click here to view the post</a>
+                <a href="/posts/{{ post.post_id }}" class="click-post">Click to View</a>
                 <!-- <h3 class="post-title">{{ post.title }}</h3> -->
                 <p id="post-content">
                     {{ post.post_content }}
                 </p>
-                <div class="post-btns">
+                <div class="post-btns-home">
                     <!-- Like button -->
                     <button class="like-button" data-post-id="{{ post.post_id }}" onclick="likePost(this)">
                         <i class="bi bi-heart"></i>
                     </button>
-                    <p>{{ post.num_likes }}</p>
-                    <i class="bi bi-chat-square-text"></i>
+                    <p id="num_of_likes">{{ post.num_likes }}</p>
+                    <button class="like-button"><i class="bi bi-chat-square-text"></i></button>
                     <p>{{ post.num_comments }}</p>
-                    <i class="bi bi-share"></i>
+                    <button class="like-button"><i class="bi bi-share"></i></button>
                 </div>
             </div>
         </div>
@@ -74,7 +74,9 @@
         <div class="recomm-container">
             <div class="recomm-user">
                 <i class="bi bi-person-circle"></i>
-                <span>{{ users.username }}</span>
+                <a href="/view-profile/{{ users.user_id }}" class="view-profile">
+                <span>{{ users.username }}</span> 
+                </a>
             </div>
             <div class="recomm-text">
                 <p class="recomm-content">Concentration: {{ users.concentration }}</p>
