--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 
         <div class="user-bio">
             <h2>{{ user.first_name }} {{ user.last_name}} </h2>
-            <h4>{{ user.concentration }} </h4>
+            <h5>{{ user.concentration }} </h5>
 
         </div>
         <form action="/settings-page" method="get">
@@ -15,10 +15,6 @@
     </div>
 
     <div class="profile-sections">
-        <!-- <a href="#"><h4 id="profile_post_btn">Posts</h4></a>
-        <a href="#"><h4 id="profile_replies_btn">My Replies</h4></a> -->
-        <!-- under posts, users posts will appear -->
-        <!-- Under replies, users comments will appear -->
         <button id="defaultOpen" class="profile-btns" onclick="openBtn(event,'MyPosts')">My Posts</button>
         <button id="profile_replies_btn" class="profile-btns" onclick="openBtn(event,'MyComments')">My Comments</button>
     </div>
@@ -42,7 +38,7 @@
                 {% endif %}
             </div>
             <div class="post-area">
-                <a href="/posts/{{ post.post_id }}" class="click-post">Click here to view the post</a>
+                <a href="/posts/{{ post.post_id }}" class="click-post">Click to View</a>
                 <!-- <h3 class="post-title">{{ post.title }}</h3> -->
                 <p id="post-content">
                     {{ post.post_content }}
@@ -81,7 +77,7 @@
                 {% endif %}
             </div>
             <div class="comment-area">
-                <a href="/posts/{{ comment.post_id }}" class="click-post">Click here to view the post</a>
+                <a href="/posts/{{ comment.post_id }}" class="click-post-comm">Click to view</a>
                 <p id="comment-content">
                     {{ comment.content }}
                 </p>
