--- a/templates/users_posts.html
+++ b/templates/users_posts.html
@@ -21,7 +21,7 @@
                 {% endif %}
             </div>
             <div class="post-area">
-                <a href="/posts/{{ post.post_id }}" class="click-post">Click here to view the post</a>
+                <a href="/posts/{{ post.post_id }}" class="click-post">Click to View</a>
                 <!-- <h3 class="post-title">{{ post.title }}</h3> -->
                 <p id="post-content">
                     {{ post.post_content }}
