adding logic to display ALL information for search bar, friend list, adding friends, mutuals

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -16,7 +16,7 @@
                         <a href="{{ url_for('profile', username=user.username) }}" class="text-decoration-none black-link">{{ user.username }}</a>
                     </div>
                     <!-- Button to add friend -->
-                    <form action="{{ url_for('friends') }}" method="GET">
+                    <form action="{{ url_for('add_friend') }}" method="POST">
                         <input type="hidden" name="friend_id" value="{{ user.user_id }}">
                         <button type="submit" class="btn btn-success btn-sm">Add Friend</button>
                     </form>
