styled so that other users name and pfp align

--- a/static/style.css
+++ b/static/style.css
@@ -154,6 +154,11 @@
     font-weight: bold;
 }
 
+.view-profile{
+    display: flex;
+    flex-direction: row;
+
+}
 /* _________________________________________________________ */
 
 footer{
