--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -45,7 +45,7 @@
                 {% endif %}
             </div>
             <div class="post-area">
-                <a href="/posts/{{ post.post_id }}" class="click-post">Click to View</a>
+                <a href="/posts/{{ post.post_id }}" class="click-post">View Post</a>
                 <!-- <h3 class="post-title">{{ post.title }}</h3> -->
                 <p id="post-content">
                     {{ post.post_content }}
