--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,7 +38,7 @@
                 {% endif %}
             </div>
             <div class="post-area">
-                <a href="/posts/{{ post.post_id }}" class="click-post">Click to View</a>
+                <a href="/posts/{{ post.post_id }}" class="click-post">View Post</a>
                 <!-- <h3 class="post-title">{{ post.title }}</h3> -->
                 <p id="post-content">
                     {{ post.post_content }}
@@ -77,7 +77,7 @@
                 {% endif %}
             </div>
             <div class="comment-area">
-                <a href="/posts/{{ comment.post_id }}" class="click-post-comm">Click to view</a>
+                <a href="/posts/{{ comment.post_id }}" class="click-post-comm">View Post</a>
                 <p id="comment-content">
                     {{ comment.content }}
                 </p>
