black color for 'other' usernames

--- a/static/style.css
+++ b/static/style.css
@@ -157,6 +157,8 @@
 .view-profile{
     display: flex;
     flex-direction: row;
+    text-decoration: none;
+    color: black;
 
 }
 /* _________________________________________________________ */
