--- a/templates/posts.html
+++ b/templates/posts.html
@@ -22,7 +22,15 @@
                 {{ post.post_content }}
             </p>
             <div class="post-btns">
-                <i class="bi bi-heart"></i>
+                {% if post.post_id in liked_content %}
+                    <button class="like-button" data-post-id="{{ post.post_id }}" onclick="likePost(this)">
+                        <i class="bi bi-heart bi-heart-fill"></i>
+                    </button>
+                {% else %}
+                    <button class="like-button" data-post-id="{{ post.post_id }}" onclick="likePost(this)">
+                        <i class="bi bi-heart"></i>
+                    </button>
+                {% endif %}
                 <p>{{ post.num_likes }}</p>
                 <i class="bi bi-chat-square-text"></i>
                 <p>{{ post.num_comments }}</p>
