--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -54,7 +54,7 @@
                     <p class="post-date">{{ post.datetime_post }}</p>
                 </div>
                 <div class="post-area">
-                    <a href="/posts/{{ post.post_id }}" class="click-post">Click to view</a>
+                    <a href="/posts/{{ post.post_id }}" class="click-post">View Post</a>
                     <!-- <h3 class="post-title">{{ post.title }}</h3> -->
                     <p id="post-content">
                         {{ post.post_content }}
