Fixing the search results to have the button changed based on status on the friend/request/pending

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -9,18 +9,39 @@
         <h3>Search Results for "{{ query }}"</h3>
         <ul class="list-group mt-3">
             {% for user in users %}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <div>
-                        <i class="bi bi-person-circle"></i>
-                        <!-- Link to view user profile with custom class -->
-                        <a href="{{ url_for('view_profile', user_id = user.user_id) }}" class="text-decoration-none black-link">{{ user.username }}</a>
-                    </div>
-                    <!-- Button to add friend -->
-                    <form action="{{ url_for('send_friend_request') }}" method="POST">
-                        <input type="hidden" name="friend_id" value="{{ user.user_id }}">
-                        <button type="submit" class="btn btn-success btn-sm">Add Friend</button>
-                    </form>
-                </li>
+                {% if user.user_id == current_user %}
+                    <!-- Do not display current user in search results -->
+                {% else %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <div>
+                            <i class="bi bi-person-circle"></i>
+                            <!-- Link to view user profile with custom class -->
+                            <a href="{{ url_for('view_profile', user_id = user.user_id) }}" class="text-decoration-none black-link">{{ user.username }}</a>
+                        </div>
+                        <!-- Button to add friend -->
+                        {% if user.user_id in pending_request %}
+                            <form action="/accept-friend-request" method="post">
+                                <button name="friend_id" id="edit-profile-btn" type="submit" value="{{ user.user_id }}" >Accept</button>
+                            </form>
+                            <form action="/delete-friend-request" method="post">
+                                <button name="friend_id" id="edit-profile-btn" type="submit" value="{{ user.user_id }}" >Delete</button>
+                            </form>
+                        {% elif user.user_id in sent_request %}
+                            <form action="/cancel-friend-request" method="post">
+                                <button name="friend_id" id="edit-profile-btn" type="submit" value="{{ user.user_id }}" >Cancel Friend Request</button>
+                            </form>
+                        {% elif user.user_id in friend_ids %}
+                            <form action="/unfriend" method="post">
+                                <button name="friend_id" id="edit-profile-btn" type="submit" value="{{ user.user_id }}" >Unfriend</button>
+                            </form>
+                        {% else %}
+                            <form action="/send-friend-request" method="post">
+                                <button name="friend_id" id="edit-profile-btn" type="submit" value="{{ user.user_id }}" >Add Friend</button>
+                            </form>
+                        {% endif %}
+                        
+                    </li>
+                {% endif %}
             {% else %}
                 <li class="list-group-item">No results found.</li>
             {% endfor %}
