--- a/static/style.css
+++ b/static/style.css
@@ -28,9 +28,20 @@
 
 #searchbar{
     border-radius: 10px;
-    padding:5px;
+    padding:7px;
     border:none;
     width: 600px;
+    margin-right: 5px;
+}
+.search_btn{
+    background-color: var(--websiteblue);
+    border-radius: 10px;
+    padding:5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border:none;
+    color: white;
+    margin-top: 0px;
 }
 
 #nav-pfp{
