code for deleting account

--- a/templates/settings_page.html
+++ b/templates/settings_page.html
@@ -59,5 +59,10 @@
       
        <button type="submit">Save Changes</button>
    </form>
+<form action= "/delete-account/{{ user_info.user_id }}" method="post">
+<button class = "btn btn-danger" type= "submit"> Delete account
+</button>
+</form>
+
 </div>
 {% endblock %}
