pfp to settings page

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -28,7 +28,9 @@
             </form> 
 
             <div>
-                <i id="nav-pfp" class="bi bi-person-circle"></i>
+                <a href="/settings-page">
+                    <i id="nav-pfp" class="bi bi-person-circle"></i>
+                </a>
             </div>
         </nav>
     </header>
